Bust cache to load new Hitler/Bigfoot header image
- Updated version to 2025-10-06-1947
- Regenerated all review pages
- This will force browsers to fetch the new PNG header image

--- a/review/13.html
+++ b/review/13.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Cocaine Bear (2023) - tldr: It's a movie about a bear doing cocaine based on 'True Events' - that's all you need to know. Features the most hilariously ineffective bear eve...">
+    <meta name="description" content="Cocaine Bear (2023) - tldr: It's a movie about a bear doing cocaine based on 'True Events' - that's all you need to know. The bear is hilariously ineffective (you could out...">
     <meta name="keywords" content="movie reviews, film criticism, snarky reviews, cinema, movies, entertainment, Cocaine Bear (2023)">
     <meta name="author" content="Snarkflix">
     
@@ -23,7 +23,7 @@
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/13">
     <meta property="og:title" content="Cocaine Bear (2023) Review - SnarkAI Score: 45/100 | Snarkflix">
-    <meta property="og:description" content="Cocaine Bear (2023) - tldr: It's a movie about a bear doing cocaine based on 'True Events' - that's all you need to know. Features the most hilariously ineffective bear ever (you could outdistance him at a brisk walk), amb...">
+    <meta property="og:description" content="Cocaine Bear (2023) - tldr: It's a movie about a bear doing cocaine based on 'True Events' - that's all you need to know. The bear is hilariously ineffective (you could outdistance him at a brisk walk), ambulance crews get...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/cocaine-bear/header-cocaine-bear.png">
     <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/cocaine-bear/header-cocaine-bear.png">
     <meta property="og:image:type" content="image/png">
@@ -41,7 +41,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.netlify.app/review/13">
     <meta property="twitter:title" content="Cocaine Bear (2023) Review - SnarkAI Score: 45/100 | Snarkflix">
-    <meta property="twitter:description" content="Cocaine Bear (2023) - tldr: It's a movie about a bear doing cocaine based on 'True Events' - that's all you need to know. Features the most hilariously ineffective bear ever (you could outdistance him at a brisk walk), amb...">
+    <meta property="twitter:description" content="Cocaine Bear (2023) - tldr: It's a movie about a bear doing cocaine based on 'True Events' - that's all you need to know. The bear is hilariously ineffective (you could outdistance him at a brisk walk), ambulance crews get...">
     <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/cocaine-bear/header-cocaine-bear.png">
     <meta property="twitter:image:alt" content="Cocaine Bear (2023) Review">
     <meta property="twitter:site" content="@snarkflix">
