--- a/review/35.html
+++ b/review/35.html
@@ -23,7 +23,7 @@
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/35">
     <meta property="og:title" content="Eternals (2021) Review - SnarkAI Score: 70/100 | Snarkflix">
-    <meta property="og:description" content="Eternals (2021) - tldr: Eternals is Marvel's attempt at DC-style superheroes, complete with cosmic beings who've been on Earth for 7000 years doing absolutely nothing useful. Features the most boring superheroes ever (...">
+    <meta property="og:description" content="Eternals (2021) - tldr: Eternals is Marvel's attempt at DC-style superheroes, complete with cosmic beings who've been on Earth for 7000 years doing absolutely nothing useful. The superheroes are boring (basically immor...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/eternals-2021/header-eternals.avif">
     <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/eternals-2021/header-eternals.avif">
     <meta property="og:image:type" content="image/png">
@@ -41,7 +41,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.netlify.app/review/35">
     <meta property="twitter:title" content="Eternals (2021) Review - SnarkAI Score: 70/100 | Snarkflix">
-    <meta property="twitter:description" content="Eternals (2021) - tldr: Eternals is Marvel's attempt at DC-style superheroes, complete with cosmic beings who've been on Earth for 7000 years doing absolutely nothing useful. Features the most boring superheroes ever (...">
+    <meta property="twitter:description" content="Eternals (2021) - tldr: Eternals is Marvel's attempt at DC-style superheroes, complete with cosmic beings who've been on Earth for 7000 years doing absolutely nothing useful. The superheroes are boring (basically immor...">
     <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/eternals-2021/header-eternals.avif">
     <meta property="twitter:image:alt" content="Eternals (2021) Review">
     <meta property="twitter:site" content="@snarkflix">
