--- a/review/36.html
+++ b/review/36.html
@@ -23,7 +23,7 @@
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/36">
     <meta property="og:title" content="Ghostbusters: Afterlife (2021) Review - SnarkAI Score: 45/100 | Snarkflix">
-    <meta property="og:description" content="Ghostbusters: Afterlife (2021) - tldr: Ghostbusters: Afterlife is basically a 90-minute nostalgia trip disguised as a movie, complete with the original cast showing up for cameos and the same plot beats as the original. Features the ...">
+    <meta property="og:description" content="Ghostbusters: Afterlife (2021) - tldr: Ghostbusters: Afterlife is basically a 90-minute nostalgia trip disguised as a movie, complete with the original cast showing up for cameos and the same plot beats as the original. The ghostbust...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/ghostbusters-afterlife-2021/header-ghostbusters-afterlife.avif">
     <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/ghostbusters-afterlife-2021/header-ghostbusters-afterlife.avif">
     <meta property="og:image:type" content="image/png">
@@ -41,7 +41,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.netlify.app/review/36">
     <meta property="twitter:title" content="Ghostbusters: Afterlife (2021) Review - SnarkAI Score: 45/100 | Snarkflix">
-    <meta property="twitter:description" content="Ghostbusters: Afterlife (2021) - tldr: Ghostbusters: Afterlife is basically a 90-minute nostalgia trip disguised as a movie, complete with the original cast showing up for cameos and the same plot beats as the original. Features the ...">
+    <meta property="twitter:description" content="Ghostbusters: Afterlife (2021) - tldr: Ghostbusters: Afterlife is basically a 90-minute nostalgia trip disguised as a movie, complete with the original cast showing up for cameos and the same plot beats as the original. The ghostbust...">
     <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/ghostbusters-afterlife-2021/header-ghostbusters-afterlife.avif">
     <meta property="twitter:image:alt" content="Ghostbusters: Afterlife (2021) Review">
     <meta property="twitter:site" content="@snarkflix">
