--- a/review/16.html
+++ b/review/16.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Winnie the Pooh: Blood and Honey (2023) - tldr: Someone took Winnie the Pooh entering public domain and ran with it in all the wrong directions. Features the most ineffective bear ever (looks ...">
+    <meta name="description" content="Winnie the Pooh: Blood and Honey (2023) - tldr: Someone took Winnie the Pooh entering public domain and ran with it in all the wrong directions. The bear is hilariously ineffective (looks like...">
     <meta name="keywords" content="movie reviews, film criticism, snarky reviews, cinema, movies, entertainment, Winnie the Pooh: Blood and Honey (2023)">
     <meta name="author" content="Snarkflix">
     
@@ -23,7 +23,7 @@
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/16">
     <meta property="og:title" content="Winnie the Pooh: Blood and Honey (2023) Review - SnarkAI Score: 15/100 | Snarkflix">
-    <meta property="og:description" content="Winnie the Pooh: Blood and Honey (2023) - tldr: Someone took Winnie the Pooh entering public domain and ran with it in all the wrong directions. Features the most ineffective bear ever (looks like an overweight furry you could outdistance at ...">
+    <meta property="og:description" content="Winnie the Pooh: Blood and Honey (2023) - tldr: Someone took Winnie the Pooh entering public domain and ran with it in all the wrong directions. The bear is hilariously ineffective (looks like an overweight furry you could outdistance at a br...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/winnie-the-pooh-blood-honey/header-winnie-the-pooh-blood-honey.avif">
     <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/winnie-the-pooh-blood-honey/header-winnie-the-pooh-blood-honey.avif">
     <meta property="og:image:type" content="image/png">
@@ -41,7 +41,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.netlify.app/review/16">
     <meta property="twitter:title" content="Winnie the Pooh: Blood and Honey (2023) Review - SnarkAI Score: 15/100 | Snarkflix">
-    <meta property="twitter:description" content="Winnie the Pooh: Blood and Honey (2023) - tldr: Someone took Winnie the Pooh entering public domain and ran with it in all the wrong directions. Features the most ineffective bear ever (looks like an overweight furry you could outdistance at ...">
+    <meta property="twitter:description" content="Winnie the Pooh: Blood and Honey (2023) - tldr: Someone took Winnie the Pooh entering public domain and ran with it in all the wrong directions. The bear is hilariously ineffective (looks like an overweight furry you could outdistance at a br...">
     <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/winnie-the-pooh-blood-honey/header-winnie-the-pooh-blood-honey.avif">
     <meta property="twitter:image:alt" content="Winnie the Pooh: Blood and Honey (2023) Review">
     <meta property="twitter:site" content="@snarkflix">
