Update Black Widow review with expanded analysis and new header image
- Expanded from 1-min to 4-min read with proper structure
- Added plot summary, character analysis (Pugh, Harbour, Julia Louis-Dreyfus)
- Detailed Taskmaster criticism and executive meddling
- Proper conclusion about Dreykov confrontation and broken nose scene
- Updated AI summary to reflect positive tone
- Raised score from 65 to 72 (aligns with solid-but-flawed films)
- Changed header image to new dramatic silhouette PNG
- Cache version: 2025-10-06-2118

--- a/review/37.html
+++ b/review/37.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Black Widow (2021) - tldr: Black Widow is Marvel's attempt at a spy thriller that's neither thrilling nor particularly spy-like. The superhero is boring (she's basically a...">
+    <meta name="description" content="Black Widow (2021) - tldr: A solid spy thriller that arrived three years too late. Pugh and Harbour bring humor and pathos to a story squeezed between Civil War and Infini...">
     <meta name="keywords" content="movie reviews, film criticism, snarky reviews, cinema, movies, entertainment, Black Widow (2021)">
     <meta name="author" content="Snarkflix">
     
@@ -22,8 +22,8 @@
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.com/review/37">
-    <meta property="og:title" content="Black Widow (2021) Review - SnarkAI Score: 65/100 | Snarkflix">
-    <meta property="og:description" content="Black Widow (2021) - tldr: Black Widow is Marvel's attempt at a spy thriller that's neither thrilling nor particularly spy-like. The superhero is boring (she's basically a normal person with good fighting skills), the plo...">
+    <meta property="og:title" content="Black Widow (2021) Review - SnarkAI Score: 72/100 | Snarkflix">
+    <meta property="og:description" content="Black Widow (2021) - tldr: A solid spy thriller that arrived three years too late. Pugh and Harbour bring humor and pathos to a story squeezed between Civil War and Infinity War but released after Endgame had closed the c...">
     <meta property="og:image" content="https://snarkflix.com/images/reviews/black-widow-2021/header-black-widow.png">
     <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/black-widow-2021/header-black-widow.png">
     <meta property="og:image:type" content="image/png">
@@ -40,13 +40,13 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.com/review/37">
-    <meta property="twitter:title" content="Black Widow (2021) Review - SnarkAI Score: 65/100 | Snarkflix">
-    <meta property="twitter:description" content="Black Widow (2021) - tldr: Black Widow is Marvel's attempt at a spy thriller that's neither thrilling nor particularly spy-like. The superhero is boring (she's basically a normal person with good fighting skills), the plo...">
+    <meta property="twitter:title" content="Black Widow (2021) Review - SnarkAI Score: 72/100 | Snarkflix">
+    <meta property="twitter:description" content="Black Widow (2021) - tldr: A solid spy thriller that arrived three years too late. Pugh and Harbour bring humor and pathos to a story squeezed between Civil War and Infinity War but released after Endgame had closed the c...">
     <meta property="twitter:image" content="https://snarkflix.com/images/reviews/black-widow-2021/header-black-widow.png">
     <meta property="twitter:image:alt" content="Black Widow (2021) Review">
     <meta property="twitter:site" content="@snarkflix">
 
-    <title>Black Widow (2021) Review - SnarkAI Score: 65/100 | Snarkflix</title>
+    <title>Black Widow (2021) Review - SnarkAI Score: 72/100 | Snarkflix</title>
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8SV8W7XL64"></script>
