Update Wolfwalkers review with full plot and thematic analysis
- Expanded from 1-min to 3-min read with proper structure
- Added plot summary set in 1650 Kilkenny, Ireland
- Character breakdown (Robyn, Mebh, Bill, Lord Protector suicide)
- Technical innovation detail (Wolfvision required new 3D animation method)
- Thematic analysis (industrialization vs. nature tension)
- Better AI summary highlighting Cartoon Saloon, Irish accents, animation contrast
- Score remains 85 (reflects very positive review)
- Cache version: 2025-10-06-2144

All TODO reviews now complete!

--- a/review/29.html
+++ b/review/29.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Wolfwalkers (2020) - The cool animation style and beautiful scenery changes are positives that enhance the movie's enjoyment. The reviewer also notes that the accents are ...">
+    <meta name="description" content="Wolfwalkers (2020) - tldr: Cartoon Saloon's gorgeous Irish folklore tale pairs Watership Down-style animation with innovative "Wolfvision" that required inventing entirely...">
     <meta name="keywords" content="movie reviews, film criticism, snarky reviews, cinema, movies, entertainment, Wolfwalkers (2020)">
     <meta name="author" content="Snarkflix">
     
@@ -23,7 +23,7 @@
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.com/review/29">
     <meta property="og:title" content="Wolfwalkers (2020) Review - SnarkAI Score: 85/100 | Snarkflix">
-    <meta property="og:description" content="Wolfwalkers (2020) - The cool animation style and beautiful scenery changes are positives that enhance the movie's enjoyment. The reviewer also notes that the accents are well-done, which suggests that attention was paid ...">
+    <meta property="og:description" content="Wolfwalkers (2020) - tldr: Cartoon Saloon's gorgeous Irish folklore tale pairs Watership Down-style animation with innovative "Wolfvision" that required inventing entirely new 3D animation techniques. The deliberate contr...">
     <meta property="og:image" content="https://snarkflix.com/images/reviews/wolfwalkers/header-wolfwalkers.avif">
     <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/wolfwalkers/header-wolfwalkers.avif">
     <meta property="og:image:type" content="image/png">
@@ -41,7 +41,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.com/review/29">
     <meta property="twitter:title" content="Wolfwalkers (2020) Review - SnarkAI Score: 85/100 | Snarkflix">
-    <meta property="twitter:description" content="Wolfwalkers (2020) - The cool animation style and beautiful scenery changes are positives that enhance the movie's enjoyment. The reviewer also notes that the accents are well-done, which suggests that attention was paid ...">
+    <meta property="twitter:description" content="Wolfwalkers (2020) - tldr: Cartoon Saloon's gorgeous Irish folklore tale pairs Watership Down-style animation with innovative "Wolfvision" that required inventing entirely new 3D animation techniques. The deliberate contr...">
     <meta property="twitter:image" content="https://snarkflix.com/images/reviews/wolfwalkers/header-wolfwalkers.avif">
     <meta property="twitter:image:alt" content="Wolfwalkers (2020) Review">
     <meta property="twitter:site" content="@snarkflix">
