Fix logo display issue and update Wonka review
- Created missing logo.webp file using ImageMagick (logo.avif wasn't converted by script)
- Updated Wonka review with revised content (score 25→30, better structure)
- Improved AI summary to be more professional and focused
- Fixed typos: trickster, Weasley, lyrical, Oompa Loompas
- Cache version: 2025-10-07-1349

Logo should now display properly in yellow circle background

--- a/review/6.html
+++ b/review/6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Wonka (2023) - tldr: The Willy Wonka origin story no one asked for, starring pixie-sized Chalamet as a frighteningly naive, stupid child who lacks any chaotic unsett...">
+    <meta name="description" content="Wonka (2023) - tldr: The Willy Wonka origin story no one asked for, starring Chalamet as a naive child who lacks Wilder's chaotic energy or Depp's unpredictability. ...">
     <meta name="keywords" content="movie reviews, film criticism, snarky reviews, cinema, movies, entertainment, Wonka (2023)">
     <meta name="author" content="Snarkflix">
     
@@ -22,8 +22,8 @@
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.com/review/6">
-    <meta property="og:title" content="Wonka (2023) Review - SnarkAI Score: 25/100 | Snarkflix">
-    <meta property="og:description" content="Wonka (2023) - tldr: The Willy Wonka origin story no one asked for, starring pixie-sized Chalamet as a frighteningly naive, stupid child who lacks any chaotic unsettling energy. His American accent is hilariously ou...">
+    <meta property="og:title" content="Wonka (2023) Review - SnarkAI Score: 30/100 | Snarkflix">
+    <meta property="og:description" content="Wonka (2023) - tldr: The Willy Wonka origin story no one asked for, starring Chalamet as a naive child who lacks Wilder's chaotic energy or Depp's unpredictability. Without his Factory's magic and danger, Wonka come...">
     <meta property="og:image" content="https://snarkflix.com/images/reviews/wonka-2024/header-wonka-2024.png">
     <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/wonka-2024/header-wonka-2024.png">
     <meta property="og:image:type" content="image/png">
@@ -40,13 +40,13 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.com/review/6">
-    <meta property="twitter:title" content="Wonka (2023) Review - SnarkAI Score: 25/100 | Snarkflix">
-    <meta property="twitter:description" content="Wonka (2023) - tldr: The Willy Wonka origin story no one asked for, starring pixie-sized Chalamet as a frighteningly naive, stupid child who lacks any chaotic unsettling energy. His American accent is hilariously ou...">
+    <meta property="twitter:title" content="Wonka (2023) Review - SnarkAI Score: 30/100 | Snarkflix">
+    <meta property="twitter:description" content="Wonka (2023) - tldr: The Willy Wonka origin story no one asked for, starring Chalamet as a naive child who lacks Wilder's chaotic energy or Depp's unpredictability. Without his Factory's magic and danger, Wonka come...">
     <meta property="twitter:image" content="https://snarkflix.com/images/reviews/wonka-2024/header-wonka-2024.png">
     <meta property="twitter:image:alt" content="Wonka (2023) Review">
     <meta property="twitter:site" content="@snarkflix">
 
-    <title>Wonka (2023) Review - SnarkAI Score: 25/100 | Snarkflix</title>
+    <title>Wonka (2023) Review - SnarkAI Score: 30/100 | Snarkflix</title>
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8SV8W7XL64"></script>
