CRITICAL: Fix PageSpeed Insights image issues - Use WebP for review headers
- Updated 12 review header images from PNG to WebP format
- Palm Springs: 3.2MB → ~400KB (87% reduction)
- Superman: 3.1MB → ~140KB (95% reduction)
- Fantastic Four: 2.5MB → ~200KB (92% reduction)
- Iron Giant: 2.4MB → ~180KB (93% reduction)
- Plus Wonka, Marvels, Mario, Cocaine Bear, Suicide Squad, Pitch Perfect, Hitler/Bigfoot, Black Widow

This should eliminate the 12.7MB PageSpeed Insights warnings
Cache version: 2025-10-07-1452

--- a/review/1.html
+++ b/review/1.html
@@ -24,8 +24,8 @@
     <meta property="og:url" content="https://snarkflix.com/review/1">
     <meta property="og:title" content="Superman (2025) Review - SnarkAI Score: 81/100 | Snarkflix">
     <meta property="og:description" content="Superman (2025) - tldr: James Gunn finally gives us the hopeful Superman we've been waiting decades for, complete with snarky Lois pinning Clark to walls and Lex's storage unit of people who've slighted him (chef's kis...">
-    <meta property="og:image" content="https://snarkflix.com/images/reviews/superman-2025/header-superman.png">
-    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/superman-2025/header-superman.png">
+    <meta property="og:image" content="https://snarkflix.com/images/reviews/superman-2025/header-superman.webp">
+    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/superman-2025/header-superman.webp">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -34,15 +34,15 @@
     <meta property="og:locale" content="en_US">
     
     <!-- WhatsApp specific meta tags -->
-    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/superman-2025/header-superman.png">
-    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/superman-2025/header-superman.png">
+    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/superman-2025/header-superman.webp">
+    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/superman-2025/header-superman.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.com/review/1">
     <meta property="twitter:title" content="Superman (2025) Review - SnarkAI Score: 81/100 | Snarkflix">
     <meta property="twitter:description" content="Superman (2025) - tldr: James Gunn finally gives us the hopeful Superman we've been waiting decades for, complete with snarky Lois pinning Clark to walls and Lex's storage unit of people who've slighted him (chef's kis...">
-    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/superman-2025/header-superman.png">
+    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/superman-2025/header-superman.webp">
     <meta property="twitter:image:alt" content="Superman (2025) Review">
     <meta property="twitter:site" content="@snarkflix">
 
