--- a/review/31.html
+++ b/review/31.html
@@ -24,8 +24,8 @@
     <meta property="og:url" content="https://snarkflix.com/review/31">
     <meta property="og:title" content="Fantastic Four: First Steps (2025) Review - SnarkAI Score: 82/100 | Snarkflix">
     <meta property="og:description" content="Fantastic Four: First Steps (2025) - Retro-futurist flair, clever worldbuilding, and the best-looking Thing ever put on screen make this FF outing the first one that actually feels worthy of the name. Reed is written perfectly—brilliant,...">
-    <meta property="og:image" content="https://snarkflix.com/images/reviews/fantastic-four-first-steps/header-fantastic-four-first-steps.png">
-    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/fantastic-four-first-steps/header-fantastic-four-first-steps.png">
+    <meta property="og:image" content="https://snarkflix.com/images/reviews/fantastic-four-first-steps/header-fantastic-four-first-steps.webp">
+    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/fantastic-four-first-steps/header-fantastic-four-first-steps.webp">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -34,15 +34,15 @@
     <meta property="og:locale" content="en_US">
     
     <!-- WhatsApp specific meta tags -->
-    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/fantastic-four-first-steps/header-fantastic-four-first-steps.png">
-    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/fantastic-four-first-steps/header-fantastic-four-first-steps.png">
+    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/fantastic-four-first-steps/header-fantastic-four-first-steps.webp">
+    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/fantastic-four-first-steps/header-fantastic-four-first-steps.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.com/review/31">
     <meta property="twitter:title" content="Fantastic Four: First Steps (2025) Review - SnarkAI Score: 82/100 | Snarkflix">
     <meta property="twitter:description" content="Fantastic Four: First Steps (2025) - Retro-futurist flair, clever worldbuilding, and the best-looking Thing ever put on screen make this FF outing the first one that actually feels worthy of the name. Reed is written perfectly—brilliant,...">
-    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/fantastic-four-first-steps/header-fantastic-four-first-steps.png">
+    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/fantastic-four-first-steps/header-fantastic-four-first-steps.webp">
     <meta property="twitter:image:alt" content="Fantastic Four: First Steps (2025) Review">
     <meta property="twitter:site" content="@snarkflix">
 
