--- a/review/37.html
+++ b/review/37.html
@@ -24,8 +24,8 @@
     <meta property="og:url" content="https://snarkflix.com/review/37">
     <meta property="og:title" content="Black Widow (2021) Review - SnarkAI Score: 72/100 | Snarkflix">
     <meta property="og:description" content="Black Widow (2021) - tldr: A solid spy thriller that arrived three years too late. Pugh and Harbour bring humor and pathos to a story squeezed between Civil War and Infinity War but released after Endgame had closed the c...">
-    <meta property="og:image" content="https://snarkflix.com/images/reviews/black-widow-2021/header-black-widow.png">
-    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/black-widow-2021/header-black-widow.png">
+    <meta property="og:image" content="https://snarkflix.com/images/reviews/black-widow-2021/header-black-widow.webp">
+    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/black-widow-2021/header-black-widow.webp">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -34,15 +34,15 @@
     <meta property="og:locale" content="en_US">
     
     <!-- WhatsApp specific meta tags -->
-    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/black-widow-2021/header-black-widow.png">
-    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/black-widow-2021/header-black-widow.png">
+    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/black-widow-2021/header-black-widow.webp">
+    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/black-widow-2021/header-black-widow.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.com/review/37">
     <meta property="twitter:title" content="Black Widow (2021) Review - SnarkAI Score: 72/100 | Snarkflix">
     <meta property="twitter:description" content="Black Widow (2021) - tldr: A solid spy thriller that arrived three years too late. Pugh and Harbour bring humor and pathos to a story squeezed between Civil War and Infinity War but released after Endgame had closed the c...">
-    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/black-widow-2021/header-black-widow.png">
+    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/black-widow-2021/header-black-widow.webp">
     <meta property="twitter:image:alt" content="Black Widow (2021) Review">
     <meta property="twitter:site" content="@snarkflix">
 
