--- a/review/42.html
+++ b/review/42.html
@@ -24,8 +24,8 @@
     <meta property="og:url" content="https://snarkflix.com/review/42">
     <meta property="og:title" content="Palm Springs (2020) Review - SnarkAI Score: 72/100 | Snarkflix">
     <meta property="og:description" content="Palm Springs (2020) - tldr: Andy Samberg and Cristin Milioti breathe fresh life into the incredibly overplayed time-loop concept with surprising charm and chemistry. Despite being yet another Groundhog Day riff (seriously,...">
-    <meta property="og:image" content="https://snarkflix.com/images/reviews/palm-springs-2020/header-palm-springs-2020.png">
-    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/palm-springs-2020/header-palm-springs-2020.png">
+    <meta property="og:image" content="https://snarkflix.com/images/reviews/palm-springs-2020/header-palm-springs-2020.webp">
+    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/palm-springs-2020/header-palm-springs-2020.webp">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -34,15 +34,15 @@
     <meta property="og:locale" content="en_US">
     
     <!-- WhatsApp specific meta tags -->
-    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/palm-springs-2020/header-palm-springs-2020.png">
-    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/palm-springs-2020/header-palm-springs-2020.png">
+    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/palm-springs-2020/header-palm-springs-2020.webp">
+    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/palm-springs-2020/header-palm-springs-2020.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.com/review/42">
     <meta property="twitter:title" content="Palm Springs (2020) Review - SnarkAI Score: 72/100 | Snarkflix">
     <meta property="twitter:description" content="Palm Springs (2020) - tldr: Andy Samberg and Cristin Milioti breathe fresh life into the incredibly overplayed time-loop concept with surprising charm and chemistry. Despite being yet another Groundhog Day riff (seriously,...">
-    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/palm-springs-2020/header-palm-springs-2020.png">
+    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/palm-springs-2020/header-palm-springs-2020.webp">
     <meta property="twitter:image:alt" content="Palm Springs (2020) Review">
     <meta property="twitter:site" content="@snarkflix">
 
