--- a/review/43.html
+++ b/review/43.html
@@ -24,8 +24,8 @@
     <meta property="og:url" content="https://snarkflix.com/review/43">
     <meta property="og:title" content="The Iron Giant (1999) Review - SnarkAI Score: 92/100 | Snarkflix">
     <meta property="og:description" content="The Iron Giant (1999) - tldr: Brad Bird's masterpiece about a gun with a soul became the best Superman film ever made, despite WB executives trying to add Poochie and a hip-hop soundtrack. Born from personal trauma and Ted H...">
-    <meta property="og:image" content="https://snarkflix.com/images/reviews/iron-giant-1999/header-iron-giant.png">
-    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/iron-giant-1999/header-iron-giant.png">
+    <meta property="og:image" content="https://snarkflix.com/images/reviews/iron-giant-1999/header-iron-giant.webp">
+    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/iron-giant-1999/header-iron-giant.webp">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -34,15 +34,15 @@
     <meta property="og:locale" content="en_US">
     
     <!-- WhatsApp specific meta tags -->
-    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/iron-giant-1999/header-iron-giant.png">
-    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/iron-giant-1999/header-iron-giant.png">
+    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/iron-giant-1999/header-iron-giant.webp">
+    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/iron-giant-1999/header-iron-giant.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.com/review/43">
     <meta property="twitter:title" content="The Iron Giant (1999) Review - SnarkAI Score: 92/100 | Snarkflix">
     <meta property="twitter:description" content="The Iron Giant (1999) - tldr: Brad Bird's masterpiece about a gun with a soul became the best Superman film ever made, despite WB executives trying to add Poochie and a hip-hop soundtrack. Born from personal trauma and Ted H...">
-    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/iron-giant-1999/header-iron-giant.png">
+    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/iron-giant-1999/header-iron-giant.webp">
     <meta property="twitter:image:alt" content="The Iron Giant (1999) Review">
     <meta property="twitter:site" content="@snarkflix">
 
