--- a/review/10.html
+++ b/review/10.html
@@ -24,8 +24,8 @@
     <meta property="og:url" content="https://snarkflix.com/review/10">
     <meta property="og:title" content="The Super Mario Bros. Movie (2023) Review - SnarkAI Score: 35/100 | Snarkflix">
     <meta property="og:description" content="The Super Mario Bros. Movie (2023) - tldr: A 90-minute Nintendo advert disguised as a film, complete with pudgy white men with scraggly beards doing terrible Italian accents for exactly 20 seconds. The animation's mediocre (I've played v...">
-    <meta property="og:image" content="https://snarkflix.com/images/reviews/the-super-mario-bros-movie-2023/header-the-super-mario-bros-movie-2023.png">
-    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/the-super-mario-bros-movie-2023/header-the-super-mario-bros-movie-2023.png">
+    <meta property="og:image" content="https://snarkflix.com/images/reviews/the-super-mario-bros-movie-2023/header-the-super-mario-bros-movie-2023.webp">
+    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/the-super-mario-bros-movie-2023/header-the-super-mario-bros-movie-2023.webp">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -34,15 +34,15 @@
     <meta property="og:locale" content="en_US">
     
     <!-- WhatsApp specific meta tags -->
-    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/the-super-mario-bros-movie-2023/header-the-super-mario-bros-movie-2023.png">
-    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/the-super-mario-bros-movie-2023/header-the-super-mario-bros-movie-2023.png">
+    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/the-super-mario-bros-movie-2023/header-the-super-mario-bros-movie-2023.webp">
+    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/the-super-mario-bros-movie-2023/header-the-super-mario-bros-movie-2023.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.com/review/10">
     <meta property="twitter:title" content="The Super Mario Bros. Movie (2023) Review - SnarkAI Score: 35/100 | Snarkflix">
     <meta property="twitter:description" content="The Super Mario Bros. Movie (2023) - tldr: A 90-minute Nintendo advert disguised as a film, complete with pudgy white men with scraggly beards doing terrible Italian accents for exactly 20 seconds. The animation's mediocre (I've played v...">
-    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/the-super-mario-bros-movie-2023/header-the-super-mario-bros-movie-2023.png">
+    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/the-super-mario-bros-movie-2023/header-the-super-mario-bros-movie-2023.webp">
     <meta property="twitter:image:alt" content="The Super Mario Bros. Movie (2023) Review">
     <meta property="twitter:site" content="@snarkflix">
 
