--- a/review/13.html
+++ b/review/13.html
@@ -24,8 +24,8 @@
     <meta property="og:url" content="https://snarkflix.com/review/13">
     <meta property="og:title" content="Cocaine Bear (2023) Review - SnarkAI Score: 45/100 | Snarkflix">
     <meta property="og:description" content="Cocaine Bear (2023) - tldr: It's a movie about a bear doing cocaine based on 'True Events' - that's all you need to know. The bear is hilariously ineffective (you could outdistance him at a brisk walk), ambulance crews get...">
-    <meta property="og:image" content="https://snarkflix.com/images/reviews/cocaine-bear/header-cocaine-bear.png">
-    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/cocaine-bear/header-cocaine-bear.png">
+    <meta property="og:image" content="https://snarkflix.com/images/reviews/cocaine-bear/header-cocaine-bear.webp">
+    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/cocaine-bear/header-cocaine-bear.webp">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -34,15 +34,15 @@
     <meta property="og:locale" content="en_US">
     
     <!-- WhatsApp specific meta tags -->
-    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/cocaine-bear/header-cocaine-bear.png">
-    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/cocaine-bear/header-cocaine-bear.png">
+    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/cocaine-bear/header-cocaine-bear.webp">
+    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/cocaine-bear/header-cocaine-bear.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.com/review/13">
     <meta property="twitter:title" content="Cocaine Bear (2023) Review - SnarkAI Score: 45/100 | Snarkflix">
     <meta property="twitter:description" content="Cocaine Bear (2023) - tldr: It's a movie about a bear doing cocaine based on 'True Events' - that's all you need to know. The bear is hilariously ineffective (you could outdistance him at a brisk walk), ambulance crews get...">
-    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/cocaine-bear/header-cocaine-bear.png">
+    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/cocaine-bear/header-cocaine-bear.webp">
     <meta property="twitter:image:alt" content="Cocaine Bear (2023) Review">
     <meta property="twitter:site" content="@snarkflix">
 
