--- a/review/24.html
+++ b/review/24.html
@@ -24,8 +24,8 @@
     <meta property="og:url" content="https://snarkflix.com/review/24">
     <meta property="og:title" content="Pitch Perfect (2012) Review - SnarkAI Score: 70/100 | Snarkflix">
     <meta property="og:description" content="Pitch Perfect (2012) - While the review acknowledges that the movie has some strong aspects, such as its cast and the entertaining riff-off scenes, it also points out some flaws, such as the forced love story and the clinic...">
-    <meta property="og:image" content="https://snarkflix.com/images/reviews/pitch-perfect/header-pitch-perfect.png">
-    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/pitch-perfect/header-pitch-perfect.png">
+    <meta property="og:image" content="https://snarkflix.com/images/reviews/pitch-perfect/header-pitch-perfect.webp">
+    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/pitch-perfect/header-pitch-perfect.webp">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -34,15 +34,15 @@
     <meta property="og:locale" content="en_US">
     
     <!-- WhatsApp specific meta tags -->
-    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/pitch-perfect/header-pitch-perfect.png">
-    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/pitch-perfect/header-pitch-perfect.png">
+    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/pitch-perfect/header-pitch-perfect.webp">
+    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/pitch-perfect/header-pitch-perfect.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.com/review/24">
     <meta property="twitter:title" content="Pitch Perfect (2012) Review - SnarkAI Score: 70/100 | Snarkflix">
     <meta property="twitter:description" content="Pitch Perfect (2012) - While the review acknowledges that the movie has some strong aspects, such as its cast and the entertaining riff-off scenes, it also points out some flaws, such as the forced love story and the clinic...">
-    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/pitch-perfect/header-pitch-perfect.png">
+    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/pitch-perfect/header-pitch-perfect.webp">
     <meta property="twitter:image:alt" content="Pitch Perfect (2012) Review">
     <meta property="twitter:site" content="@snarkflix">
 
