--- a/review/28.html
+++ b/review/28.html
@@ -24,8 +24,8 @@
     <meta property="og:url" content="https://snarkflix.com/review/28">
     <meta property="og:title" content="The Man Who Killed Hitler and Then the Bigfoot (2018) Review - SnarkAI Score: 45/100 | Snarkflix">
     <meta property="og:description" content="The Man Who Killed Hitler and Then the Bigfoot (2018) - tldr: Sam Elliott stars in a bizarre mashup that should've been two separate films. The Hitler assassination backstory could be compelling if taken seriously, and a retired hunter vs Bigfoot could wor...">
-    <meta property="og:image" content="https://snarkflix.com/images/reviews/the-man-who-killed-hitler-and-then-the-bigfoot/header-the-man-who-killed-hitler-and-then-the-bigfoot.png">
-    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/the-man-who-killed-hitler-and-then-the-bigfoot/header-the-man-who-killed-hitler-and-then-the-bigfoot.png">
+    <meta property="og:image" content="https://snarkflix.com/images/reviews/the-man-who-killed-hitler-and-then-the-bigfoot/header-the-man-who-killed-hitler-and-then-the-bigfoot.webp">
+    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/the-man-who-killed-hitler-and-then-the-bigfoot/header-the-man-who-killed-hitler-and-then-the-bigfoot.webp">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -34,15 +34,15 @@
     <meta property="og:locale" content="en_US">
     
     <!-- WhatsApp specific meta tags -->
-    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/the-man-who-killed-hitler-and-then-the-bigfoot/header-the-man-who-killed-hitler-and-then-the-bigfoot.png">
-    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/the-man-who-killed-hitler-and-then-the-bigfoot/header-the-man-who-killed-hitler-and-then-the-bigfoot.png">
+    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/the-man-who-killed-hitler-and-then-the-bigfoot/header-the-man-who-killed-hitler-and-then-the-bigfoot.webp">
+    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/the-man-who-killed-hitler-and-then-the-bigfoot/header-the-man-who-killed-hitler-and-then-the-bigfoot.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.com/review/28">
     <meta property="twitter:title" content="The Man Who Killed Hitler and Then the Bigfoot (2018) Review - SnarkAI Score: 45/100 | Snarkflix">
     <meta property="twitter:description" content="The Man Who Killed Hitler and Then the Bigfoot (2018) - tldr: Sam Elliott stars in a bizarre mashup that should've been two separate films. The Hitler assassination backstory could be compelling if taken seriously, and a retired hunter vs Bigfoot could wor...">
-    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/the-man-who-killed-hitler-and-then-the-bigfoot/header-the-man-who-killed-hitler-and-then-the-bigfoot.png">
+    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/the-man-who-killed-hitler-and-then-the-bigfoot/header-the-man-who-killed-hitler-and-then-the-bigfoot.webp">
     <meta property="twitter:image:alt" content="The Man Who Killed Hitler and Then the Bigfoot (2018) Review">
     <meta property="twitter:site" content="@snarkflix">
 
