--- a/review/6.html
+++ b/review/6.html
@@ -24,8 +24,8 @@
     <meta property="og:url" content="https://snarkflix.com/review/6">
     <meta property="og:title" content="Wonka (2023) Review - SnarkAI Score: 30/100 | Snarkflix">
     <meta property="og:description" content="Wonka (2023) - tldr: The Willy Wonka origin story no one asked for, starring Chalamet as a naive child who lacks Wilder's chaotic energy or Depp's unpredictability. Without his Factory's magic and danger, Wonka come...">
-    <meta property="og:image" content="https://snarkflix.com/images/reviews/wonka-2024/header-wonka-2024.png">
-    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/wonka-2024/header-wonka-2024.png">
+    <meta property="og:image" content="https://snarkflix.com/images/reviews/wonka-2024/header-wonka-2024.webp">
+    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/wonka-2024/header-wonka-2024.webp">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -34,15 +34,15 @@
     <meta property="og:locale" content="en_US">
     
     <!-- WhatsApp specific meta tags -->
-    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/wonka-2024/header-wonka-2024.png">
-    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/wonka-2024/header-wonka-2024.png">
+    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/wonka-2024/header-wonka-2024.webp">
+    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/wonka-2024/header-wonka-2024.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.com/review/6">
     <meta property="twitter:title" content="Wonka (2023) Review - SnarkAI Score: 30/100 | Snarkflix">
     <meta property="twitter:description" content="Wonka (2023) - tldr: The Willy Wonka origin story no one asked for, starring Chalamet as a naive child who lacks Wilder's chaotic energy or Depp's unpredictability. Without his Factory's magic and danger, Wonka come...">
-    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/wonka-2024/header-wonka-2024.png">
+    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/wonka-2024/header-wonka-2024.webp">
     <meta property="twitter:image:alt" content="Wonka (2023) Review">
     <meta property="twitter:site" content="@snarkflix">
 
