--- a/review/7.html
+++ b/review/7.html
@@ -24,8 +24,8 @@
     <meta property="og:url" content="https://snarkflix.com/review/7">
     <meta property="og:title" content="The Marvels (2023) Review - SnarkAI Score: 75/100 | Snarkflix">
     <meta property="og:description" content="The Marvels (2023) - tldr: "The Marvels" is like a cosmic joyride with a few flat tires along the way. Iman Vellani's Kamala Khan brings a nerdy enthusiasm that's as refreshing as finding an untouched slice of pizza the m...">
-    <meta property="og:image" content="https://snarkflix.com/images/reviews/the-marvels/header-the-marvels.png">
-    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/the-marvels/header-the-marvels.png">
+    <meta property="og:image" content="https://snarkflix.com/images/reviews/the-marvels/header-the-marvels.webp">
+    <meta property="og:image:secure_url" content="https://snarkflix.com/images/reviews/the-marvels/header-the-marvels.webp">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -34,15 +34,15 @@
     <meta property="og:locale" content="en_US">
     
     <!-- WhatsApp specific meta tags -->
-    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/the-marvels/header-the-marvels.png">
-    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/the-marvels/header-the-marvels.png">
+    <meta property="og:image:url" content="https://snarkflix.com/images/reviews/the-marvels/header-the-marvels.webp">
+    <meta name="twitter:image:src" content="https://snarkflix.com/images/reviews/the-marvels/header-the-marvels.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://snarkflix.com/review/7">
     <meta property="twitter:title" content="The Marvels (2023) Review - SnarkAI Score: 75/100 | Snarkflix">
     <meta property="twitter:description" content="The Marvels (2023) - tldr: "The Marvels" is like a cosmic joyride with a few flat tires along the way. Iman Vellani's Kamala Khan brings a nerdy enthusiasm that's as refreshing as finding an untouched slice of pizza the m...">
-    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/the-marvels/header-the-marvels.png">
+    <meta property="twitter:image" content="https://snarkflix.com/images/reviews/the-marvels/header-the-marvels.webp">
     <meta property="twitter:image:alt" content="The Marvels (2023) Review">
     <meta property="twitter:site" content="@snarkflix">
 
