Optimize LCP (Largest Contentful Paint) for hero logo
- Removed lazy loading from hero logo (was delaying LCP)
- Added fetchpriority='high' to prioritize logo loading
- Added preload link for logo.webp to make it discoverable immediately
- Cleaned up duplicate preload links
- Cache version: 2025-10-07-1513

This should significantly improve LCP scores by ensuring the hero logo loads immediately without lazy loading delays

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="snarkflix-hero-image">
                 <picture>
                     <source srcset="images/site-assets/logo.webp" type="image/webp">
-                    <img src="images/site-assets/logo.avif" alt="Snarkflix Logo" class="snarkflix-hero-logo" loading="lazy">
+                    <img src="images/site-assets/logo.avif" alt="Snarkflix Logo" class="snarkflix-hero-logo" fetchpriority="high">
                 </picture>
             </div>
         </div>
@@ -314,8 +314,8 @@
         </div>
     </footer>
 
-    <script src="reviews-data.js?v=2025-10-07-1508" defer></script>
-    <script src="script.js?v=2025-10-07-1508" defer></script>
+    <script src="reviews-data.js?v=2025-10-07-1513" defer></script>
+    <script src="script.js?v=2025-10-07-1513" defer></script>
     
     <!-- Service Worker Registration -->
     <script>
