Implement responsive images to fix PageSpeed Insights size warnings
- Created responsive image versions (400w, 800w, 1200w) for problematic images
- Fantastic Four: 94% smaller (555KB → 30KB for 400w)
- Palm Springs: 97% smaller (398KB → 10KB for 400w)
- Superman: 92% smaller (140KB → 11KB for 400w)
- Iron Giant: 90% smaller (125KB → 12KB for 400w)
- Logo: 49% smaller (42KB → 21KB for 400w)

- Added createResponsiveImage() helper function to script.js
- Updated all review cards to use <picture> elements with srcset
- Updated hero logo to use responsive images
- Browser automatically selects appropriate size based on viewport
- Cache version: 2025-10-07-1515

This should eliminate the 1.4MB PageSpeed Insights warnings

--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
             </div>
             <div class="snarkflix-hero-image">
                 <picture>
-                    <source srcset="images/site-assets/logo.webp" type="image/webp">
+                    <source srcset="images/site-assets/logo-400w.webp 400w, images/site-assets/logo-800w.webp 800w, images/site-assets/logo-1200w.webp 1200w" 
+                            sizes="(max-width: 768px) 200px, (max-width: 1200px) 300px, 300px" 
+                            type="image/webp">
                     <img src="images/site-assets/logo.avif" alt="Snarkflix Logo" class="snarkflix-hero-logo" fetchpriority="high">
                 </picture>
             </div>
@@ -314,8 +316,8 @@
         </div>
     </footer>
 
-    <script src="reviews-data.js?v=2025-10-07-1513" defer></script>
-    <script src="script.js?v=2025-10-07-1513" defer></script>
+    <script src="reviews-data.js?v=2025-10-07-1515" defer></script>
+    <script src="script.js?v=2025-10-07-1515" defer></script>
     
     <!-- Service Worker Registration -->
     <script>
